# vaccine-antidote-quality-harness

./: .gitignore  CONTRIBUTING.md  EXTRACTION_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: repnoise_example.json  sft_example.json  vaccine_example.json
docs/: GSOC_CONTEXT.md  quality_workflow.md
examples/data/: alignment_train.jsonl  repnoise_train.jsonl
examples/eval/: README.md  sample_generations_judged.placeholder.json  sample_prompts.json
scripts/: run_local_demo.sh
src/beq/: __init__.py  cli.py
src/beq/artifacts/: __init__.py  io.py
src/beq/core/: __init__.py  config.py  models.py  run_alignment.py
src/beq/data/: __init__.py  datasets.py
src/beq/evals/: __init__.py  constants.py  generate.py  judge.py  moderation.py  pku_utils.py  report.py
src/beq/methods/: __init__.py  repnoise.py  sft.py  vaccine.py
tests/: test_artifact_schema.py  test_imports.py
