[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beq-oss-proposal"
version = "0.1.0"
description = "Demo harness: behavioral evals, guardrail-style judging, artifact contracts—patterns for OSS contributor quality workflows and GSoC Gemini CLI–oriented work (HF-based stand-in, not Gemini CLI itself)."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["behavioral-eval", "quality", "guardrail", "huggingface", "gsoc", "gemini-cli"]
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.36.0",
  "peft>=0.7.0",
  "tqdm>=4.65.0",
  "datasets>=2.14.0",
  "accelerate>=0.25.0",
  "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
beq = "beq.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
